# fixmath-rs

./: Cargo.toml  LICENSE  README.md
src/: consts.rs  fix16.rs  lib.rs
