[package]
name = "fixmath-rs"
version = "0.1.0"
authors = ["EliseZeroTwo <elise@headpat.services>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-rounding = []

[dependencies]

[dev-dependencies]
libfixmath-src-rs = { git = "https://github.com/EliseZeroTwo/libfixmath-src-rs.git", branch = "main" }